<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".LoginActivity">

        <ImageView
            android:id="@+id/btn_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_btn_home" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/logo"
            android:text="@string/one_stagram"
            android:textColor="@color/main_color"
            android:textSize="35dp"
            android:layout_marginTop="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:text="@string/signup"
            android:textSize="25dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_home" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etv_nametoggle"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="60dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/toggle_round"
            android:paddingTop="3dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_login" >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etv_signupname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:background="@null"
                android:hint="이름"
                android:textSize="15sp"
                app:layout_constraintBottom_toTopOf="@+id/etv_idtoggle2"
                app:layout_constraintTop_toBottomOf="@+id/tv_login" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/layout_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            app:layout_constraintTop_toBottomOf="@id/etv_nametoggle">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etv_idtoggle2"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="45dp"
                android:background="@drawable/toggle_round"
                android:paddingTop="3dp"
                android:layout_marginEnd="5dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etv_signupid"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:textSize="15sp"
                    android:background="@null"
                    android:hint="아이디" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_double_check"
                android:layout_width="70dp"
                android:layout_height="42dp"
                android:background="@drawable/btn_round"
                android:text="@string/double_check"
                android:textColor="@color/white"
                android:textSize="13sp"
                android:textStyle="bold"
                android:layout_marginStart="5dp"/>

        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etv_pwtoggle"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/toggle_round"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout_id"
            app:passwordToggleEnabled="true"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etv_signuppw"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="10dp"
                android:background="@color/back_gray"
                android:hint="@string/pw_limit"
                android:inputType="textPassword"
                android:textSize="14sp"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_realsignup"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/btn_round"
            android:text="@string/signup"
            android:textColor="@color/white"
            android:textSize="15dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etv_pwtoggle"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>