<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LoginActivity">

        <ImageView
            android:id="@+id/btn_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_btn_home" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/logo"
            android:text="@string/one_stagram"
            android:textColor="@color/purple"
            android:textSize="35dp"
            android:layout_marginTop="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="70dp"
            android:text="@string/login"
            android:textSize="30dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_home" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etv_idtoggle1"
            android:layout_width="330dp"
            android:layout_height="50dp"
            android:layout_marginTop="80dp"
            android:background="@drawable/toggle_round"
            android:paddingTop="3dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_login">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etv_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="7dp"
                android:layout_marginEnd="5dp"
                android:background="#ffffff"
                android:hint="아이디" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etv_pwtoggle1"
            android:layout_width="330dp"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/toggle_round"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etv_idtoggle1"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etv_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="7dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="3dp"
                android:background="#ffffff"
                android:hint="비밀번호" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="330dp"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/btn_round"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="15dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etv_pwtoggle1" />


        <Button
            android:id="@+id/btn_signup"
            android:layout_width="330dp"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/btn_round"
            android:text="@string/signup"
            android:textColor="@color/white"
            android:textSize="15dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_login" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>