<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbars="none"
    tools:context=".MyPageActivity">

  <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent">


    <ImageView
        android:id="@+id/btn_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_btn_home" />

    <TextView
        android:id="@+id/my_page"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/my_page"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="30dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

      <RadioButton
          android:id="@+id/rb_kr"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginHorizontal="20dp"
          android:checked="true"
          android:text="@string/kr" />

      <RadioButton
          android:id="@+id/rb_en"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginHorizontal="20dp"
          android:text="@string/en" />
    </RadioGroup>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img_profile"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="66dp"
        android:background="@drawable/oval"
        android:clipToOutline="true"
        android:src="@drawable/defaultprofile"
        app:civ_border_color="@color/story_stoke"
        app:civ_border_overlay="true"
        app:civ_border_width="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_home"
        app:layout_constraintVertical_bias="0.304" />

    <TextView
        android:id="@+id/name_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginTop="50dp"
        android:text="@string/name"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/mbti_textview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/my_page" />

    <TextView
        android:id="@+id/mbti_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginTop="30dp"
        android:text="@string/mbti"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/thoughts_textview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_textview" />

    <TextView
        android:id="@+id/thoughts_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginTop="30dp"
        android:text="@string/hobby"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mbti_textview" />

    <EditText
        android:id="@+id/content_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="220dp"
        android:background="@null"
        android:inputType="text"
        android:textSize="12sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="@+id/name_textview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/name_textview" />

    <EditText
        android:id="@+id/content_mbti"
        android:layout_width="175dp"
        android:layout_height="match_parent"
        android:layout_marginStart="220dp"
        android:background="@null"
        android:inputType="text"
        android:textSize="12sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="@+id/mbti_textview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/mbti_textview" />

    <EditText
        android:id="@+id/content_thoughts"
        android:layout_width="175dp"
        android:layout_height="match_parent"
        android:layout_marginStart="220dp"
        android:background="@null"
        android:inputType="text"
        android:textSize="12sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="@id/thoughts_textview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/thoughts_textview" />


    <Button
        android:id="@+id/btn_revise"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_marginStart="46dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="37dp"
        android:background="@drawable/post_radius"
        android:text="@string/revise"
        android:textSize="11sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/thoughts_textview" />

    <TextView
        android:id="@+id/postline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:background="@drawable/yellow_line"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_revise" />


    <!--게시글 부분-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/postline">

      <androidx.constraintlayout.widget.ConstraintLayout
          android:id="@+id/postlayout_01"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:paddingBottom="20dp"
          app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/userName1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.06"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/post_image1"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_marginStart="20dp"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toTopOf="@+id/post_writing1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/userName1"
            tools:srcCompat="@tools:sample/avatars" />

        <EditText
            android:id="@+id/post_writing1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:background="@null"
            android:textSize="12sp"
            android:hint="게시글"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

      </androidx.constraintlayout.widget.ConstraintLayout>

      <TextView
          android:id="@+id/postline2"
          android:layout_width="match_parent"
          android:layout_height="0dp"
          android:background="@drawable/line_01"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@id/postlayout_01" />

      <androidx.constraintlayout.widget.ConstraintLayout
          android:id="@+id/postlayout_02"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="12dp"
          android:paddingBottom="30dp"
          app:layout_constraintTop_toBottomOf="@id/postlayout_01">

        <TextView
            android:id="@+id/userName2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.06"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/post_image2"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_marginStart="20dp"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toTopOf="@+id/post_writing2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/userName2"
            tools:srcCompat="@tools:sample/avatars" />

        <EditText
            android:id="@+id/post_writing2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:background="@null"
            android:textSize="12sp"
            android:hint="게시글"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.066"
            app:layout_constraintStart_toStartOf="parent" />

      </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

  </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>